--- a/KafkaLearing/src/main/resources/application.properties
+++ b/KafkaLearing/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=mqstudy
 
 ###########【数据源配置】###########
 spring.datasource.username=root
-spring.datasource.data-password=PCY90321
+spring.datasource.password=PCY90321
 spring.datasource.url=jdbc:mysql://101.37.173.73:3306/huangshan?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
